--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <div class="card">
   <div class="question" id="question">
     <div class="big-heart">❤️</div>
-    <h1>Will You Be<br>My Valentine?</h1>
+    <h1>Hey Eva! 💌<br>Will You Be<br>Nikos' Valentine?</h1>
     <div class="btn-area" id="btnArea">
       <button class="btn-yes" id="yesBtn">Yes! 💕</button>
       <button class="btn-no" id="noBtn">No</button>
@@ -192,7 +192,7 @@
   <div class="celebration" id="celebration">
     <div style="font-size:90px;">🥰</div>
     <h2>Yaaay! 💕</h2>
-    <p>I knew you'd say yes!</p>
+    <p>Nikos & Eva forever! 🥰</p>
     <p style="margin-top:12px; font-size:1.4rem;">Happy Valentine's Day! 🌹</p>
   </div>
 </div>
